# grokking

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  sweep.yaml
.github/workflows/: ci.yml
grokking/: cli.py  data.py  model.py  training.py
